# UCC-A2UI

./: .gitignore  DEPLOYMENT.md  README.md  config.yaml  pyproject.toml
data/: components.json  params.json  ucc_component_params.json
scripts/: debug_run.py
src/ucc_a2ui/: cli.py  config.py  embeddings.py  pipeline_embed_disk.py
src/ucc_a2ui/docs/: __init__.py  docgen.py  templates.py
src/ucc_a2ui/embed/: __init__.py  chunker.py  embedder_base.py  embedder_dashscope_qwen.py  embedder_mock.py  embedder_openai_compat.py  index_faiss.py  search.py
src/ucc_a2ui/generator/: __init__.py  generate.py  ir_schema.py  json_extract.py  llm_client_base.py  llm_dashscope_qwen.py  llm_mock.py  llm_openai_compat.py  prompt_builder.py  validator.py
tests/: test_generate_mock.py  test_json_extract.py  test_json_library_loader.py  test_sync_docgen_mock_embed.py  test_validator.py
tests/fixtures/: ui_prompts.jsonl
tools/: smoke_bounded_embed.py  smoke_embed.py
